--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2756,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -2769,55 +2769,48 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Impressions</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
        "      <th>CostEUR</th>\n",
+       "      <th>ImpressionAssistedConversions</th>\n",
        "      <th>Criteria</th>\n",
-       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>Impressions</th>\n",
        "      <th>Clicks</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ClickAssistedConversions</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>3.751079e+06</td>\n",
-       "      <td>178732.032500</td>\n",
-       "      <td>165030</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>112287.461667</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>469581.166667</td>\n",
+       "      <td>154426</td>\n",
+       "      <td>1.886971e+06</td>\n",
+       "      <td>267007.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True</th>\n",
-       "      <td>9.507356e+05</td>\n",
-       "      <td>50452.889167</td>\n",
-       "      <td>2192</td>\n",
-       "      <td>1067.433333</td>\n",
-       "      <td>134708.416667</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>16682.150833</td>\n",
+       "      <td>4323.416667</td>\n",
+       "      <td>5370</td>\n",
+       "      <td>8.205995e+05</td>\n",
+       "      <td>60209.250000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           Impressions        CostEUR  Criteria  \\\n",
-       "ClickAssistedConversions                                          \n",
-       "False                     3.751079e+06  178732.032500    165030   \n",
-       "True                      9.507356e+05   50452.889167      2192   \n",
+       "       ClickAssistedConversions        CostEUR  ImpressionAssistedConversions  \\\n",
+       "False                      0.00  112287.461667                       0.000000   \n",
+       "True                       1.75   16682.150833                    4323.416667   \n",
        "\n",
-       "                          ClickAssistedConversions         Clicks  \n",
-       "ClickAssistedConversions                                           \n",
-       "False                                     0.000000  469581.166667  \n",
-       "True                                   1067.433333  134708.416667  "
+       "       Criteria   Impressions         Clicks  \n",
+       "False    154426  1.886971e+06  267007.333333  \n",
+       "True       5370  8.205995e+05   60209.250000  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2831,7 +2824,7 @@
     "                                                  'CostEUR':sum,\n",
     "                                                  'Impressions':sum,\n",
     "                                                  'Clicks':sum,\n",
-    "                                                                   'Criteria':'count'})"
+    "                                                  'Criteria':'count'})"
    ]
   },
   {
