--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2829,32 +2829,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f7d3c86a150>]], dtype=object)"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAeYAAAFhCAYAAAClJgmvAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xt0FPX9//HX5krMtZDNGiPwxaCFUylyERQiKAESDLdC\nFK1SK/Wg9ggqFpQoIMGiUqGVelBRKhWhqIhgCColFCJHLqLSwE/jQcBGErMJYEIuQC67vz84rgQI\nu8pu9sPm+fiL2bxn5r1vI6+Z2dnB4nQ6nQIAAEYI8ncDAADgRwQzAAAGIZgBADAIwQwAgEEIZgAA\nDEIwAwBgEIIZrcILL7ygqVOnSpK+++479ezZU+6+Kbhz504NHDiwJdqTJO3atUvDhg3z+X6Ki4vV\npUsXORwOn++rpcyaNUsvvviiv9sAvCLE3w0A3pSTk6OlS5fqwIEDioqKUteuXXXvvfdKkiwWiyQp\nMTFRn332mUfb+2Gd5hw6dEhDhgzRbbfdplmzZl1Q771799b777/vtu6FF15QUVGR5s2b97P3deb7\n+uijj/Tyyy/riy++UJs2bZScnKy7775bgwYN+tn7aEmzZ8/2dwuA13DGjIDx2muv6ZlnntH999+v\nbdu2afPmzbrjjjv0n//8x2f7XLNmja688kqtX79e9fX1PtuPL33wwQd66KGH9Jvf/Eb5+fn6+OOP\n9eCDD2rz5s3+bs2lsbHR3y0ALYZgRkCorq7WwoULNWvWLA0ePFht2rRRcHCwBg4cqD/96U9Nas+8\nlFtZWanp06frhhtuUN++ffXAAw+ccx+vv/66hg8fLrvd7npt7dq1mjRpkuLi4s46AJg7d6769eun\nXr16aeTIkfr6668lSVu2bFFGRoZ69uypgQMH6rXXXpN09qXzxYsXa8CAAerZs6eGDRum7du366OP\nPtJLL72k9evXq0ePHho9erTr/T/++ONKSUnRwIED9be//c11qd7hcOjZZ5/VddddpyFDhpwVuM8+\n+6weeOABjR07VlFRUZJOnb1nZ2dLkpxOpxYtWqRBgwapf//+euyxx1RdXd1klmvWrNFNN92k66+/\nXi+99JIkqaysTN27d9exY8dc+/riiy903XXXuYJ21apVuvnmm9W3b1/dc889KikpcdV26dJFy5cv\nV1pamtLS0s470+nTp+v55593rfvWW29p6NCh6tu3r/74xz+qrKysyXZXrlyptLQ09enTx/U+Jamo\nqEjjx49X7969df3112vKlCnn/F0AfIlL2QgIn3/+uerr6zV48GCP6k+/lDt16lRFRUXp/fffV0RE\nhD7//POz6l944QVt2rRJb7zxhuLi4iSd+kz4yJEjGjhwoPbu3avVq1dr6NChkqStW7fq008/1YYN\nGxQVFaUDBw4oJiZGkvT4449r4cKF6tmzp6qqqnTo0KGz+jp48KBWrFih1atXKz4+XiUlJWpsbFT7\n9u113333nXUp+9FHH5XValVeXp5qamp033336bLLLtOtt96qN998U1u2bNHatWsVERHR5MBj//79\nKi0tdfV9Lu+8847Wrl2rZcuWqW3btpo2bZqys7Ob7P+zzz7Thx9+qAMHDuiWW27R0KFDdcUVV6hH\njx768MMPdcstt0iS1q1bp/T0dAUHB2vjxo165ZVX9NJLL6ljx45avHixpkyZopUrV7q2u2nTJq1a\ntUrh4eHaunWrdu3adc6Znm7btm1asGCBli5dquTkZD377LOaMmWK3njjDVfN5s2b9c4776iqqkpj\nxozRoEGDlJKSoueff14pKSlatmyZ6urqtHfv3mbnAvgKZ8wICBUVFYqLi1NQ0E/7lS4rK9PWrVuV\nnZ2tqKgoBQcHq3fv3q6fOxwOPfPMM9q2bZuWLVvmCmVJrrPEsLAwpaena+vWrTp69KgkKSQkRDU1\nNdq/f7+cTqeuuOIKxcfHS5LCwsL09ddfq7q6WtHR0eratetZfQUHB6u+vl779u1TQ0ODLrvsMrVv\n3/6c7+HIkSPKz89XVlaWwsPD1bZtW911113Kzc2VdOpS9V133SWbzaaYmBjXZ+7SqasFkmS1Wpud\n0bp16/T73/9eSUlJioiI0JQpU7R+/XrXFQeLxaIHHnhAYWFh6tKli7p06aLCwkJJUkZGhtatW+fa\n1vr16zVixAhJ0ptvvqmJEyeqU6dOCgoK0sSJE1VYWKjvvvvOVX/vvfcqOjpaYWFhCgkJUW1t7Tln\nema/mZmZ6tKli0JDQzVlyhTt3r27ydn4vffeq6ioKCUmJqpv37768ssvXf/diouLZbfbFRYWpp49\nezY7F8BXCGYEhLi4OFVUVPzkO41LS0sVGxvruoR7pqqqKr311luaOHGiIiMjXa+fPHlSH3zwgesu\n6q5duyopKckVQtddd53uvPNOzZ49W/369dPMmTNVU1MjSVq4cKE2b96sQYMGafz48dq9e/dZ++3Q\noYOysrL097//Xf3799cjjzyi8vLyc/ZYXFyshoYGpaSkqE+fPrr22ms1a9Ys10FCWVmZLr30Ulf9\nZZdd5vrzDwcazW37h/VPXycpKUkNDQ06fPiw67XTA7JNmzaqra2VJKWlpem///2vDh8+rJ07dyoo\nKEi9evWSJJWUlOjPf/6z+vTpoz59+qhv376yWCxNPio4ve/zzfR8/V5yySWKi4trst3T+42IiHD1\nO23aNDmdTmVmZmrEiBF65513mp0L4CsEMwJCjx49FBoaqo0bN/6k9RITE1VZWen6zPRMsbGxevnl\nlzV9+vQmd3L/+9//VnV1tWbOnKmUlBSlpKSotLRUa9ascdXceeedWr16tXJzc3Xw4EEtWbJEknT1\n1Vdr0aJF2rZtm1JTU/XQQw+dc98ZGRlasWKFNm3aJEl67rnnmn0P4eHh2rFjh3bu3KlPPvlEu3bt\nUk5OjqRTZ8OlpaWu+tPPHK+44golJiZqw4YNzc4oISGhyTrFxcUKCQk559nqmWJiYtS/f3/l5uZq\n3bp1ysjIaNJ3dna2du7c6er7888/1zXXXOOqOfPu8eZmer5+a2trVVFR0STkm9OuXTvNmTNHH330\nkZ588knNnj1b3377rdv1AG8imBEQoqKiNHnyZGVnZ2vjxo06ceKEGhoalJ+fr7/85S9n1f9wY5TV\natWAAQP05JNP6tixY2poaNCuXbua1F577bV67rnnNGnSJO3Zs0eS9O677yozM1M5OTlau3at1q5d\nqxUrVqiwsFD79u3Tnj17VFBQoIaGBrVp00bh4eEKCgpSfX29cnJyVF1dreDgYEVGRp7z8vvBgwe1\nfft21dXVKTQ01LW+dOpsr7i4uMl76N+/v+bOnavq6mo5nU59++23+uSTTyRJw4YN07Jly2S321VZ\nWalXXnmlyb4effRRLVq0SO+++65r/V27dmnmzJmSTh0gLF26VIcOHVJNTY3++te/KiMjw9WPu++D\nZ2RkaO3atdqwYYOGDx/uev22227Tyy+/7LqBq6qqSh988EGz22lupmcaPny4Vq9ercLCQtXV1WnB\nggXq3r27EhMTz9undOqy/w9n1jExMQoKCnL7lTnA27j5CwHj7rvvltVq1YsvvqipU6cqMjJSV199\nte677z5t3bq1Se3pf9nOmzdPc+fO1bBhw9TQ0KC+ffs2+ZxZkvr166e5c+fq/vvv18KFC7Vjxw6t\nWbNG7dq1c9W0a9dON9xwg959913dcMMNevrpp3Xo0CGFh4crJSVFf/jDHySdupP7qaeeUmNjozp1\n6qT58+ef9V7q6uo0f/58HThwQCEhIerRo4fmzJkjSUpPT9d7772nvn376vLLL9fq1av17LPP6rnn\nnlNGRoZqa2vVvn173XPPPZKkW2+9Vf/73/80cuRIRUdHa8KECdqxY4drX2lpaYqMjNSLL76oOXPm\nqE2bNurcubOr38zMTJWXl+vOO+9UXV2dbrjhBj3xxBPnnOW5llNTU/XEE08oKSlJv/zlL12vDx48\nWLW1tXr44Yf13XffKTo6Wv369VN6evo5t1NdXd3sTE93/fXX68EHH9SkSZN07Ngx9ejRQwsWLGi2\nv9Pt2bPHdYATHx+vxx9/XJdffnmz9YAvWJxuDnezsrK0efNmtWvXznVp7HQ5OTmuI/DIyEg9+eST\nTf7nAwAAnnN7KXvMmDHn/BznB+3bt9fy5cv13nvv6f7779eMGTO82iAAAK2J22Du3bv3Ob8r+INr\nrrlG0dHRrj+ffucjAAD4abx689fbb7+tAQMGeHOTAAC0Kl67+Wv79u1avXq1VqxY4a1NAgDQ6ngl\nmAsLCzVz5ky9+uqrio2N9Wgdp9PJ1xAAADiDR8F8vhu3S0pKNHnyZM2bN08dOnTweMcWi0Xl5VUe\n1+Ons1qjmXELYM6+x4x9jxm3DKs12m2N22B+5JFHtGPHDlVUVOjGG2/UpEmTVF9fL4vFonHjxmnR\nokWqrKzU7Nmz5XQ6FRISolWrVnnlDQAA0Nq4/R6zL3F05lscAbcM5ux7zNj3mHHL8OSMmUdyAgBg\nEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMAYBCCGQAAgxDMAAAYhGAG\nAMAgBDMAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgBADAI\nwQwAgEEIZgAADEIwAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMA\nYBCCGQAAgxDMAAAYhGAGAMAgBDMAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIO4DeasrCz1\n69dPI0aMaLbmqaee0tChQzVq1Ch9+eWXXm0QAIDWxG0wjxkzRkuWLGn251u2bFFRUZE2bNig7Oxs\nzZo1y6sNAgDQmrgN5t69eysmJqbZn+fl5Wn06NGSpO7du6uqqkqHDx/2XocAALQiF/wZc1lZmS69\n9FLXss1mk91uv9DNAgDQKoX4uwEAAAJRZU2dHA6nazksNEhWD9a74GBOSEhQaWmpa7m0tFQ2m82j\nda3W6AvdPdxgxi3jYpmz/WitTtQ1+LsNj+0/VKGoiDAdLKs5588dTqcaGh0KCwlu4c5a1sn6RoWH\nev89nqxrVHjYqe02N2P8fBHhIYoI/zFmvyqu1P+1b+t2PY+C2el0Nvuz1NRULV++XDfffLN2796t\nmJgYxcfHe7JZlZdXeVSHn8dqjWbGPnaovFphbcJUUVHr1e3+z14la2yEa7muodEr4RMVEaqYqLAL\n3k5L6XxptCLCQ/hdbgHM2PeCHA6P6twG8yOPPKIdO3aooqJCN954oyZNmqT6+npZLBaNGzdOAwcO\n1JYtWzRkyBBFRETo6aefvuDmgYvFd0dqNaBXO0WGWry63U6JMQoN4TEDQGvkNpjnz5/vdiMzZ870\nSjOArzgcTjn145WfunqHqo7Xe2XbUZeE6XhNqFe2BQDc/IVW4T+fF8saF3HaK061i2lzwdvt0iHu\ngrcBAKcjmOE3J+satffgUQUHXdhlYE8+f20bE65fJ7e7oP0AQEsgmOE3lTUndWm7S5QUH+nvVgDA\nGNxdAgCAQThjhlt19Y36fwePynKeS84n6hrUJrTpr9OZl5jPXG5odKhLx194v2EAuIgRzHDrWG2d\n4uMi1D4hyt+tAEDA41I2AAAG4YwZZ6mrb9SJ+kbXcs3xBgVd4J3TAADPEMwBxOF0quz7467lOlm0\no6BE0RE/7RGMJ+oazvjOr9QhnsvYANASCOYAUlldp+LyGl0Wf4mkU8847945XjGXXDzPRgaA1o5g\nDjDxsW2U2O7U94J5KD0AXHy4+QsAAIMQzAAAGIRgBgDAIAQzAAAGIZgBADAIwQwAgEEIZgAADEIw\nAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMAYBCCGQAAgxDMAAAY\nJMTfDcBz9Q0OSc7z/Lyx5ZoBAPgEwewHDY0O7dl/RBaLxfXaifoGtQk7/3+OyuqTio+NOG9N56RY\nr/QIAPAPgtkPao7XKy46XJ0SY/zdCgDAMHzGDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDA\nIAQzAAAGIZgBADAIwQwAgEEIZgAADOJRMOfn5ys9PV1paWlavHjxWT///vvvdc8992jUqFEaMWKE\nVq9e7fVGAQBoDdw+K9vhcGjOnDlaunSpEhISlJmZqdTUVCUnJ7tqli9frq5du+rVV1/V0aNHNWzY\nMI0cOVIhITyKGwCAn8LtGXNBQYE6duyopKQkhYaGKiMjQ3l5eU1q4uPjVVNTI0mqqalRXFwcoQwA\nwM/gNpjtdrsSExNdyzabTWVlZU1qbr31Vu3bt08pKSkaNWqUsrKyvN8pAACtgFdu/nr55ZfVpUsX\nbd26VWvWrFF2drbrDBoAAHjO7fVmm82mkpIS17LdbldCQkKTms8++0z33XefJKlDhw66/PLLdeDA\nAXXr1u2827Zao39Ozxe9kPBQOYKDW+T9t9YZtzTm7HvM2PeYsW/Flnl2wuo2mLt166aioiIVFxfL\narUqNzdXCxYsaFKTnJysbdu2qVevXjp8+LC++eYbtW/f3u3Oy8urPGoy0FRWn1RF1UmVR/j2c3ir\nNbrVzrglMWffY8a+x4x9r7LyuEd1bpMhODhYM2bM0IQJE+R0OpWZmank5GStXLlSFotF48aN08SJ\nE5WVlaWRI0fK6XRq6tSpiouLu+A3ESi+Kvpex082upbrGhp1xWUxfuwIAGAqi9PpdPpr563l6Gz3\n14d1Tef4Ft8vR8Atgzn7HjP2PWbse7v3HdaQfp3c1vGdpgvU0OhQ9fH6Jq8VFn2vNqE/jrb2ZP2Z\nqwEAcE4E83nUnqjXx3tLFR8b4XqtrqFRYSHBruVGh0NtY9o0We/qTu0UFRHaYn0CAAIHwXwejQ6n\n/i8xRp2TYv3dCgCgleAfsQAAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMAYBCCGQAAgxDMAAAY\nhGAGAMAgBDMAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgB\nADAIwQwAgEEIZgAADEIwAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxC\nMAMAYBCCGQAAgxDMAAAYhGAGAMAgBDMAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAA\nGMSjYM7Pz1d6errS0tK0ePHic9bs2LFDo0eP1vDhwzV+/HivNgkAQGsR4q7A4XBozpw5Wrp0qRIS\nEpSZmanU1FQlJye7aqqqqpSdna1//OMfstlsOnr0qE+bBgAgULk9Yy4oKFDHjh2VlJSk0NBQZWRk\nKC8vr0lNTk6Ohg4dKpvNJklq27atb7oFACDAuQ1mu92uxMRE17LNZlNZWVmTmm+++UaVlZUaP368\nxo4dqzVr1ni/UwAAWgG3l7I90djYqC+++EL//Oc/VVtbq9tuu009evRQx44dz7ue1Rrtjd37TFj1\nSdU5Lcb3eT4Xc+8XE+bse8zY95ixb8WW1XhU5zaYbTabSkpKXMt2u10JCQln1fziF79QeHi4wsPD\n1bt3bxUWFroN5vLyKo+a9Jeq2jp9X3Fc5eWh/m7lZ7Fao42fcSBgzr7HjH2PGfteZeVxj+rcXsru\n1q2bioqKVFxcrLq6OuXm5io1NbVJTWpqqj799FM1Njbq+PHjKigoaHJzGAAA8IzbM+bg4GDNmDFD\nEyZMkNPpVGZmppKTk7Vy5UpZLBaNGzdOycnJSklJ0ciRIxUUFKRbb71VnTt3bon+AQAIKBan0+n0\n185Nv2xSVVsn+/fH1Tkp1t+t/CxcmmoZzNn3mLHvMWPf273vsIb06+S2jid/AQBgEIIZAACDEMwA\nABiEYAYAwCAEMwAABvHKk78uVnsOHFFjY/M3pZ+oa1Biu8gW7AgA0Nq1mmA++N0xHT12QsFBP14k\niI9to8sTovzYFQAATbWaYK490aBfJ7dTaEiwv1sBAKBZfMYMAIBBCGYAAAxCMAMAYBCCGQAAgxDM\nAAAYhGAGAMAgBDMAAAYJiO8xNzoc+u/XRxRksbheO1HXoDZhP76976tP6pcd4vzRHgAAHguIYD5Z\n16ioiFBd1Z7gBQBc3LiUDQCAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgBADAI\nwQwAgEEIZgAADEIwAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMA\nYBCCGQAAgxDMAAAYhGAGAMAgBDMAAAYhmAEAMAjBDACAQTwK5vz8fKWnpystLU2LFy9utq6goEC/\n+tWvtGHDBq81CABAa+I2mB0Oh+bMmaMlS5Zo3bp1ys3N1f79+89ZN3/+fKWkpPikUQAAWgO3wVxQ\nUKCOHTsqKSlJoaGhysjIUF5e3ll1y5YtU1pamtq2beuTRgEAaA3cBrPdbldiYqJr2Wazqays7Kya\njRs36re//a33OwQAoBXxys1fc+fO1dSpU13LTqfTG5sFAKDVCXFXYLPZVFJS4lq22+1KSEhoUrN3\n7149/PDDcjqd+v7775Wfn6+QkBClpqaed9tWa/TPbLup6uP1qq53em17gYSZtAzm7HvM2PeYsW/F\nltV4VOc2mLt166aioiIVFxfLarUqNzdXCxYsaFJz+mfO06dP10033eQ2lCWpvLzKoybdqT1Rr4qK\nWpWXh3lle4HCao322ozRPObse8zY95ix71VWHveozm0wBwcHa8aMGZowYYKcTqcyMzOVnJyslStX\nymKxaNy4cRfcLAAAOMXi9OMHwt48Yz5UXqOr2sd5ZXuBgiPglsGcfY8Z+x4z9r3d+w5rSL9Obut4\n8hcAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgBADAIwQwA\ngEEIZgAADEIwAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMAYBCC\nGQAAgxDMAAAYhGAGAMAgBDMAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDA\nIAQzAAAGIZgBADAIwQwAgEEIZgAADEIwAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwiEfB\nnJ+fr/T0dKWlpWnx4sVn/TwnJ0cjR47UyJEjdfvtt+urr77yeqMAALQGIe4KHA6H5syZo6VLlyoh\nIUGZmZlKTU1VcnKyq6Z9+/Zavny5oqOjlZ+frxkzZuitt97yaeMAAAQit2fMBQUF6tixo5KSkhQa\nGqqMjAzl5eU1qbnmmmsUHR3t+rPdbvdNtwAABDi3wWy325WYmOhattlsKisra7b+7bff1oABA7zT\nHQAArYzbS9k/xfbt27V69WqtWLHCm5sFAKDVcBvMNptNJSUlrmW73a6EhISz6goLCzVz5ky9+uqr\nio2N9WjnVmv0T2i1edXH61Vd7/Ta9gIJM2kZzNn3mLHvMWPfii2r8ajObTB369ZNRUVFKi4ultVq\nVW5urhYsWNCkpqSkRJMnT9a8efPUoUMHj5ssL6/yuPZ8ak/Uq6KiVuXlYV7ZXqCwWqO9NmM0jzn7\nHjP2PWbse5WVxz2qcxvMwcHBmjFjhiZMmCCn06nMzEwlJydr5cqVslgsGjdunBYtWqTKykrNnj1b\nTqdTISEhWrVq1QW/CQAAWhuL0+l0+mvn3jxjPlReo6vax3lle4GCI+CWwZx9jxn7HjP2vd37DmtI\nv05u63jyFwAABiGYAQAwCMEMAIBBCGYAAAxCMAMAYBCCGQAAgxDMAAAYhGAGAMAgBDMAAAYhmAEA\nMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgBADAIwQwAgEEIZgAADEIw\nAwBgEIIZAACDEMwAABiEYAYAwCAEMwAABiGYAQAwCMEMAIBBCGYAAAxCMAMAYBCCGQAAgxDMAAAY\nhGAGAMAgBDMAAAYhmAEAMAjBDACAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgB\nADCIR8Gcn5+v9PR0paWlafHixeeseeqppzR06FCNGjVKX375pVebBACgtXAbzA6HQ3PmzNGSJUu0\nbt065ebmav/+/U1qtmzZoqKiIm3YsEHZ2dmaNWuWzxoGACCQuQ3mgoICdezYUUlJSQoNDVVGRoby\n8vKa1OTl5Wn06NGSpO7du6uqqkqHDx/2TccAAASwEHcFdrtdiYmJrmWbzaY9e/Y0qSkrK9Oll17a\npMZutys+Pt4rTZ6sb5TD4XQtn6hrVO2Jetfy8bpGr+wHAAB/cxvMLa32RL2++rZCFovF9drRYyd0\nWbtI13JQkEVx0eGu5dDQYLU9bRkAANNEhAd7VOc2mG02m0pKSlzLdrtdCQkJTWoSEhJUWlrqWi4t\nLZXNZnO7c6s1+pyvd2zf1u268ExzM4Z3MWffY8a+x4x9y9P5uv2MuVu3bioqKlJxcbHq6uqUm5ur\n1NTUJjWpqalas2aNJGn37t2KiYnx2mVsAABaE7dnzMHBwZoxY4YmTJggp9OpzMxMJScna+XKlbJY\nLBo3bpwGDhyoLVu2aMiQIYqIiNDTTz/dEr0DABBwLE6n0+m+DAAAtASe/AUAgEEIZgAADEIwAwBg\nEL98jzk/P19z586V0+nU2LFjNXHiRH+0EbCysrK0efNmtWvXTjk5Of5uJyCVlpZq2rRpOnLkiIKC\ngnTLLbfod7/7nb/bCjh1dXW64447VF9fr/r6eqWmpmrKlCn+bisgORwOjR07VjabTS+99JK/2wk4\ngwYNUlRUlIKCghQSEqJVq1Y1W9viwfzDs7eXLl2qhIQEZWZmKjU1VcnJyS3dSsAaM2aMxo8fr2nT\npvm7lYAVHBys6dOnq2vXrqqpqdGYMWPUv39/fo+9LCwsTK+//roiIiLU2Nio22+/XZ9++ql69erl\n79YCzusanhV2AAACX0lEQVSvv67k5GRVV1f7u5WAZLFYtGzZMsXGxrqtbfFL2Z48exsXpnfv3oqJ\nifF3GwHNarWqa9eukqTIyEglJyerrKzMz10FpoiICEmnzp4dDodHf7HhpyktLdWWLVt0yy23+LuV\ngOV0OuVwODyqbfFgPtezt/kLDRezQ4cOqbCwUL/+9a/93UpAcjgcGj16tPr3768+ffqoc+fO/m4p\n4MydO1fTpk1r8ihkeJfFYtGECRM0duxYvfXWW+et5eYv4ALU1NRo8uTJysrKUmRkpPsV8JMFBQVp\nzZo1ys/P165du7Rz505/txRQNm/erPj4eHXt2lU81sJ3/vWvf+ndd9/VK6+8ouXLl2vXrl3N1rZ4\nMHvy7G3gYtDQ0KDJkydr1KhRGjx4sL/bCXhRUVEaOHCg9u7d6+9WAspnn32mTZs2KTU1VY888oh2\n7NjB/Sk+8EPOtW3bVkOGDDnrX2k8XYsHsyfP3saF48jX97KystS5c2fddddd/m4lYB09elRVVVWS\npBMnTujjjz92fbYP75gyZYo2b96svLw8LViwQH379tW8efP83VZAOX78uGpqaiRJtbW12rp1q668\n8spm61v8ruzmnr0N7/nhqLeiokI33nijJk2apLFjx/q7rYDy6aefKicnR1dddZVGjx4ti8Wihx9+\nWAMGDPB3awGlvLxcjz32mOvGmVGjRun666/3d1vAT3L48GE98MADslgsamxs1IgRI5SSktJsPc/K\nBgDAINz8BQCAQQhmAAAMQjADAGAQghkAAIMQzAAAGIRgBgDAIAQzAAAGIZgBADDI/weL8mNbx+W3\nRgAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f7d4267bc10>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[(df['Group'] == 'Other')&(df['ClickAssistedConversions'] > 0)].hist('ClickAssistedConversions',\n",
     "                                                                       bins=100,\n",
@@ -2865,85 +2844,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ClickAssistedConversions</th>\n",
-       "      <th>CostEUR</th>\n",
-       "      <th>AllConversions</th>\n",
-       "      <th>Criteria</th>\n",
-       "      <th>Impressions</th>\n",
-       "      <th>Clicks</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ClickAssistedConversions</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>180693.0675</td>\n",
-       "      <td>3435.166667</td>\n",
-       "      <td>165092</td>\n",
-       "      <td>3.786784e+06</td>\n",
-       "      <td>4.748968e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>True</th>\n",
-       "      <td>14631.983333</td>\n",
-       "      <td>305698.3900</td>\n",
-       "      <td>23880.083333</td>\n",
-       "      <td>2727</td>\n",
-       "      <td>5.483955e+06</td>\n",
-       "      <td>1.054610e+06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          ClickAssistedConversions      CostEUR  \\\n",
-       "ClickAssistedConversions                                          \n",
-       "False                                     0.000000  180693.0675   \n",
-       "True                                  14631.983333  305698.3900   \n",
-       "\n",
-       "                          AllConversions  Criteria   Impressions        Clicks  \n",
-       "ClickAssistedConversions                                                        \n",
-       "False                        3435.166667    165092  3.786784e+06  4.748968e+05  \n",
-       "True                        23880.083333      2727  5.483955e+06  1.054610e+06  "
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.groupby(by=(df['ClickAssistedConversions']>0))[['ClickAssistedConversions','AllConversions',\n",
-    "                                                   'CostEUR','Impressions','Clicks',\n",
-    "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
-    "                                                                   'ClickAssistedConversions':sum,\n",
-    "                                                                   'CostEUR':sum,\n",
-    "                                                                   'Impressions':sum,\n",
-    "                                                                   'Clicks':sum,\n",
-    "                                                                   'Criteria':'count'})"
+    "df[(df['Group'] == 'Other')&(df['ImpressionAssistedConversions'] > 0)].hist('ImpressionAssistedConversions',\n",
+    "                                                                       bins=100,\n",
+    "                                                                       cumulative=1,\n",
+    "                                                                       normed=True,\n",
+    "                                                                       histtype='step')"
    ]
   },
   {
