--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2854,11 +2854,11 @@
     }
    ],
    "source": [
-    "fig,ax = plt.subplots()\n",
-    "data=df[df['Group'] == 'Other'].plot(x='CostEUR',y='Impressions', \n",
+    "with sns.axes_style():\n",
+    "  fig,ax = plt.subplots()\n",
+    "  data=df[df['Group'] == 'Other'].plot(x='CostEUR',y='Impressions', \n",
     "                                     kind='hexbin',ax=ax,\n",
-    "                                     mincnt=1)\n",
-    "ax"
+    "                                     mincnt=1)\n"
    ]
   },
   {
