--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -20,6 +20,7 @@
     "import gcp.bigquery as bq\n",
     "import pandas as pd\n",
     "import matplotlib.pylab as plt\n",
+    "import matplotlib.colors as colors\n",
     "import numpy as np\n",
     "import seaborn as sns"
    ]
@@ -2858,6 +2859,7 @@
     "  fig,ax = plt.subplots()\n",
     "  data=df[df['Group'] == 'Other'].plot(x='CostEUR',y='Impressions', \n",
     "                                     kind='hexbin',ax=ax,\n",
+    "                                     \n",
     "                                     mincnt=1)\n"
    ]
   },
