--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2871,7 +2871,30 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def setGroup(x):\n",
+    "  if x['AllConversions'] > 0:\n",
+    "    return 'Converter'\n",
+    "  else:\n",
+    "    return 'Other'\n",
+    "  \n",
+    "def setSubGroup(x):\n",
+    "  if x['AllConversions'] > 99:\n",
+    "    return 'Converter - High'\n",
+    "  elif x['AllConversions'] > 9:\n",
+    "    return 'Converter - Mid'\n",
+    "  elif x['AllConversions'] > 2:\n",
+    "    return 'Converter - Low'\n",
+    "  elif x['AllConversions'] > 0:\n",
+    "    return 'Converter - Occasional'\n",
+    "  elif x['Click'] > 0:\n",
+    "    return 'Click'\n",
+    "  else:\n",
+    "    return 'Impressions'\n",
+    "  \n",
+    "df['Group'] = df.apply(setGroup,axis=1)\n",
+    "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
+   ]
   }
  ],
  "metadata": {
