--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2866,17 +2866,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def setGroup(x):\n",
     "  if x['AllConversions'] > 0:\n",
     "    return 'Converter'\n",
+    "  elif x['Clicks'] > 0:\n",
+    "    return 'Click'\n",
     "  else:\n",
-    "    return 'Other'\n",
+    "    return 'Impressions'\n",
     "  \n",
     "def setSubGroup(x):\n",
     "  if x['AllConversions'] > 99:\n",
@@ -2887,7 +2889,7 @@
     "    return 'Converter - Low'\n",
     "  elif x['AllConversions'] > 0:\n",
     "    return 'Converter - Occasional'\n",
-    "  elif x['Click'] > 0:\n",
+    "  elif x['Clicks'] > 0:\n",
     "    return 'Click'\n",
     "  else:\n",
     "    return 'Impressions'\n",
@@ -2895,6 +2897,15 @@
     "df['Group'] = df.apply(setGroup,axis=1)\n",
     "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
