--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -193,6 +193,7 @@
     "  AVG(Clicks) as Clicks,\n",
     "  AVG(ClickAssistedConversions) as ClickAssistedConversions,  \n",
     "  AVG(CTR) as CTR,\n",
+    "  AVG(CostEUR/Clicks) as CPC,\n",
     "  AVG(QualityScore) as QualityScore, \n",
     "  AVG(CostEUR) as CostEUR,\n",
     "  AVG(AllConversions) as AllConversions,\n",
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
