--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2955,6 +2955,9 @@
     }
    ],
    "source": [
+    "metrics = ['CTR',Cpu'QualityScore',u'AveragePosition',                          \n",
+    "           u'BounceRate',u'AveragePageviews',u'AverageTimeOnSite',u'PercentNewVisitors']\n",
+    "\n",
     "g = sns.pairplot(data=df[[u'SubGroup','CTR',u'QualityScore',u'AveragePosition',                          \n",
     "                            u'BounceRate',u'AveragePageviews',\n",
     "                            u'AverageTimeOnSite',u'PercentNewVisitors']],hue=u'SubGroup')"
