--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2955,8 +2955,11 @@
     }
    ],
    "source": [
-    "metrics = ['CTR',Cpu'QualityScore',u'AveragePosition',                          \n",
-    "           u'BounceRate',u'AveragePageviews',u'AverageTimeOnSite',u'PercentNewVisitors']\n",
+    "metrics = ['CTR','CPC',u'QualityScore',u'AveragePosition',                          \n",
+    "           u'BounceRate',u'AveragePageviews',u'AverageTimeOnSite',\n",
+    "           u'PercentNewVisitors']\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
     "\n",
     "g = sns.pairplot(data=df[[u'SubGroup','CTR',u'QualityScore',u'AveragePosition',                          \n",
     "                            u'BounceRate',u'AveragePageviews',\n",
