--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2959,7 +2959,7 @@
     "           u'BounceRate',u'AveragePageviews',u'AverageTimeOnSite',\n",
     "           u'PercentNewVisitors']\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(9, 3, 3)\n",
     "\n",
     "g = sns.pairplot(data=df[[u'SubGroup','CTR',u'QualityScore',u'AveragePosition',                          \n",
     "                            u'BounceRate',u'AveragePageviews',\n",
