--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3061,7 +3061,7 @@
     "           u'PercentNewVisitors']\n",
     "\n",
     "for i in range(len(metrics)):  \n",
-    "  df.boxplot(column=metrics[i],by='Group')\n",
+    "  df.plot(column=metrics[i],by='Group')\n",
     "\n"
    ]
   },
