--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2979,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -2987,15 +2987,53 @@
     {
      "data": {
       "text/plain": [
-       "0.22471804511278193"
+       "CTR                     0.258936\n",
+       "CPC                     0.415576\n",
+       "QualityScore            9.198504\n",
+       "AveragePosition         2.013959\n",
+       "BounceRate              0.122735\n",
+       "AveragePageviews        3.911622\n",
+       "AverageTimeOnSite     182.531941\n",
+       "PercentNewVisitors      0.296548\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def setGroup(x):\n",
+    "  if x['AllConversions'] > 0:\n",
+    "    return 'Converter'\n",
+    "  elif x['Clicks'] > 0:\n",
+    "    return 'Click'\n",
+    "  else:\n",
+    "    return 'Impressions'\n",
+    "  \n",
+    "def setSubGroup(x):\n",
+    "  if x['AllConversions'] > 99:\n",
+    "    return 'Converter - High'\n",
+    "  elif x['AllConversions'] > 9:\n",
+    "    return 'Converter - Mid'\n",
+    "  elif x['AllConversions'] > 2:\n",
+    "    return 'Converter - Low'\n",
+    "  elif x['AllConversions'] > 0:\n",
+    "    score = 0\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return 'Converter - Occasional'\n",
+    "  elif x['Clicks'] > 0:\n",
+    "    return 'Click'\n",
+    "  else:\n",
+    "    return 'Impressions'\n",
+    "  \n",
+    "df['Group'] = df.apply(setGroup,axis=1)\n",
+    "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
+   ]
   },
   {
    "cell_type": "code",
