--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3012,7 +3012,7 @@
     "  else:\n",
     "    return 'Impressions'\n",
     "  \n",
-    "def setSubGroup(x):\n",
+    "def setSubGroup(x,threshold=threshold):\n",
     "  if x['AllConversions'] > 99:\n",
     "    return 'Converter - High'\n",
     "  elif x['AllConversions'] > 9:\n",
@@ -3021,7 +3021,15 @@
     "    return 'Converter - Low'\n",
     "  elif x['AllConversions'] > 0:\n",
     "    score = 0\n",
-    "    \n",
+    "    ,'CPC',u'QualityScore',u'AveragePosition',                          \n",
+    "           u'BounceRate',u'AveragePageviews',u'AverageTimeOnSite',\n",
+    "           u'PercentNewVisitors'\n",
+    "    if x['CTR'] > threshold['CTR']:\n",
+    "      score++\n",
+    "      \n",
+    "    if x['CPC'] > threshold['']:\n",
+    "      score++\n",
+    "\n",
     "    \n",
     "    \n",
     "    \n",
