--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3021,16 +3021,29 @@
     "    return 'Converter - Low'\n",
     "  elif x['AllConversions'] > 0:\n",
     "    score = 0\n",
-    "    ,'CPC',u'QualityScore',u'AveragePosition',                          \n",
-    "           u'BounceRate',u'AveragePageviews',u'AverageTimeOnSite',\n",
-    "           u'PercentNewVisitors'\n",
     "    if x['CTR'] > threshold['CTR']:\n",
     "      score++\n",
     "      \n",
-    "    if x['CPC'] > threshold['']:\n",
+    "    if x['CPC'] < threshold['CPC']:\n",
     "      score++\n",
     "\n",
+    "    if x['QualityScore'] > threshold['QualityScore']:\n",
+    "      score++\n",
+    "      \n",
+    "    if x['BounceRate'] < threshold['BounceRate']:\n",
+    "      score++    \n",
     "    \n",
+    "    if x['AveragePageviews'] > threshold['AveragePageviews']:\n",
+    "      score++\n",
+    "      \n",
+    "    if x['AverageTimeOnSite'] > threshold['AverageTimeOnSite']:\n",
+    "      score++\n",
+    "\n",
+    "    if x['PercentNewVisitors'] > threshold['PercentNewVisitors']:\n",
+    "      score++\n",
+    "      \n",
+    "    if x['AveragePosition'] < threshold['AveragePosition']:\n",
+    "      score++      \n",
     "    \n",
     "    \n",
     "    return 'Converter - Occasional'\n",
