--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3019,7 +3019,9 @@
     "    return 'Converter - Mid'\n",
     "  elif x['AllConversions'] > 2:\n",
     "    return 'Converter - Low'\n",
-    "  elif x['AllConversions'] > 0:\n",
+    "  elif x['AllConversions'] > 0:    \n",
+    "    return 'Converter - Occasional'\n",
+    "  elif x['Clicks'] > 0:\n",
     "    score = 0\n",
     "    if x['CTR'] > threshold['CTR']:\n",
     "      score++\n",
@@ -3043,12 +3045,9 @@
     "      score++\n",
     "      \n",
     "    if x['AveragePosition'] < threshold['AveragePosition']:\n",
-    "      score++      \n",
-    "    \n",
-    "    \n",
-    "    return 'Converter - Occasional'\n",
-    "  elif x['Clicks'] > 0:\n",
-    "    return 'Click'\n",
+    "      score++ \n",
+    "    return 'Click - {0:00d}'.format(score/4)  \n",
+    "  \n",
     "  else:\n",
     "    return 'Impressions'\n",
     "  \n",
