--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3046,13 +3046,33 @@
     "      \n",
     "    if x['AveragePosition'] < threshold['AveragePosition']:\n",
     "      score++ \n",
-    "    return 'Click - {0:00d}'.format(score/4)  \n",
+    "    return 'Click - {0:02d}'.format(score/2)  \n",
     "  \n",
     "  else:\n",
     "    return 'Impressions'\n",
     "  \n",
     "df['Group'] = df.apply(setGroup,axis=1)\n",
     "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Click - 03\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 7\n",
+    "print 'Click - {0:02d}'.format(score/2)  "
    ]
   },
   {
