--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2979,30 +2979,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CTR                     0.258936\n",
-       "CPC                     0.415576\n",
-       "QualityScore            9.198504\n",
-       "AveragePosition         2.013959\n",
-       "BounceRate              0.122735\n",
-       "AveragePageviews        3.911622\n",
-       "AverageTimeOnSite     182.531941\n",
-       "PercentNewVisitors      0.296548\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def setGroup(x):\n",
     "  if x['AllConversions'] > 0:\n",
@@ -3024,32 +3005,39 @@
     "  elif x['Clicks'] > 0:\n",
     "    score = 0\n",
     "    if x['CTR'] > threshold['CTR']:\n",
-    "      score++\n",
+    "      score+=1\n",
     "      \n",
     "    if x['CPC'] < threshold['CPC']:\n",
-    "      score++\n",
+    "      score+=1\n",
     "\n",
-    "    if x['QualityScore'] > threshold['QualityScore']:\n",
-    "      score++\n",
+    "    if x['QualityScore'] >= threshold['QualityScore']:\n",
+    "      score+=1\n",
     "      \n",
     "    if x['BounceRate'] < threshold['BounceRate']:\n",
-    "      score++    \n",
+    "      score+=1    \n",
     "    \n",
     "    if x['AveragePageviews'] > threshold['AveragePageviews']:\n",
-    "      score++\n",
+    "      score+=1\n",
     "      \n",
     "    if x['AverageTimeOnSite'] > threshold['AverageTimeOnSite']:\n",
-    "      score++\n",
+    "      score+=1\n",
     "\n",
     "    if x['PercentNewVisitors'] > threshold['PercentNewVisitors']:\n",
-    "      score++\n",
+    "      score+=1\n",
     "      \n",
     "    if x['AveragePosition'] < threshold['AveragePosition']:\n",
-    "      score++ \n",
+    "      score+=1 \n",
+    "    \n",
     "    return 'Click - {0:02d}'.format(score/2)  \n",
-    "  \n",
     "  else:\n",
-    "    return 'Impressions'\n",
+    "    score = 0\n",
+    "    if x['QualityScore'] >= threshold['QualityScore']:\n",
+    "      score+=1\n",
+    "    \n",
+    "    if x['AveragePosition'] < threshold['AveragePosition']:\n",
+    "      score+=1\n",
+    "\n",
+    "    return 'Impressions - {0:02d}'.format(score)  \n",
     "  \n",
     "df['Group'] = df.apply(setGroup,axis=1)\n",
     "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
